--- a/DS30.ipynb
+++ b/DS30.ipynb
@@ -275,7 +275,7 @@
    "source": [
     "## Topic Modelling\n",
     "\n",
-    "1. Latent Dirichlet Alloction (LDA): A [Bayesian](https://en.wikipedia.org/wiki/Bayesian_probability) [Graphical Model](https://en.wikipedia.org/wiki/Graphical_model)\n",
+    "1. [Latent Dirichlet Alloction](https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation) (LDA) was develoepd by [David Blei, Andrew Ng, and Michael Jordan](https://www.cs.princeton.edu/~blei/papers/BleiNgJordan2003.pdf).  Here's a [Bayesian](https://en.wikipedia.org/wiki/Bayesian_probability) [Graphical Model](https://en.wikipedia.org/wiki/Graphical_model):\n",
     "    ![LDA](lda1.png)\n",
     "1. LDA is a topic model:\n",
     "    ![LDA](lda2.png)"
@@ -306,7 +306,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you enjoyed this and want to learn more about doing data science in industry, consider [applying](https://www.thedataincubator.com/#apply&ref=ds30) to be a fellow at [The Data Incubator](https://www.thedataincubator.com/&ref=ds30)"
+    "## If you want more ....\n",
+    "\n",
+    "If you enjoyed this and want to learn more about doing data science in industry, consider [applying](https://www.thedataincubator.com/#apply&ref=ds30) to be a fellow at [The Data Incubator](https://www.thedataincubator.com/&ref=ds30)\n",
+    "\n",
+    "If you would like to hire data scientists, introduce data science corporate training, or partner to bring The Data Incubator to your country, reach out [here](https://www.thedataincubator.com/#hire&ref=ds30).\n"
    ]
   }
  ],
