Updating after broadcast

--- a/DS30.ipynb
+++ b/DS30.ipynb
@@ -8,6 +8,7 @@
     "\n",
     "We do things in Python:\n",
     "\n",
+    "1. We love IPython notebook as a pedagogical tool.\n",
     "1. Python strikes a good balance between flexibility (it's interpreted) and speed (core machine-learning and linear algebra is in c via [cython](http://cython.org/)).\n",
     "1. Python strikes a good balance between being a programming language (it has a lot of language support built up by the community) and specialized machine-learning routines (e.g. [numpy](http://www.numpy.org/), [scipy](http://www.scipy.org/), [scikit learn](http://scikit-learn.org/), [pandas](http://pandas.pydata.org/)).\n",
     "1. The downside of using Python is that installation and dependency management is a pain.  Installing Python is dev-ops work: there's a steep learning curve and you only really need to do it once: unfortunately, you need to be able to do it before you can start using the tools.  If you have the time, you should invest some time in learning about [pip](http://pip.readthedocs.org/en/stable/installing/) and [Virtual Environments](https://virtualenv.pypa.io/en/latest/), although even then, installing scientific python can be a pain.  One of the advantages of being a fellow at [The Data Incubator](https://www.thedataincubator.com/&ref=ds30) is that they get an environement with all the tooling installed."
@@ -275,7 +276,7 @@
    "source": [
     "## Topic Modelling\n",
     "\n",
-    "1. [Latent Dirichlet Alloction](https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation) (LDA) was develoepd by [David Blei, Andrew Ng, and Michael Jordan](https://www.cs.princeton.edu/~blei/papers/BleiNgJordan2003.pdf).  Here's a [Bayesian](https://en.wikipedia.org/wiki/Bayesian_probability) [Graphical Model](https://en.wikipedia.org/wiki/Graphical_model):\n",
+    "1. [Latent Dirichlet Allocation](https://en.wikipedia.org/wiki/Latent_Dirichlet_allocation) (LDA) was develoepd by [David Blei, Andrew Ng, and Michael Jordan](https://www.cs.princeton.edu/~blei/papers/BleiNgJordan2003.pdf).  Here's a [Bayesian](https://en.wikipedia.org/wiki/Bayesian_probability) [Graphical Model](https://en.wikipedia.org/wiki/Graphical_model):\n",
     "    ![LDA](lda1.png)\n",
     "1. LDA is a topic model:\n",
     "    ![LDA](lda2.png)"
