--- a/neural_nets.ipynb
+++ b/neural_nets.ipynb
@@ -48,12 +48,18 @@
     "import numpy as np\n",
     "import matplotlib.pylab as plt\n",
     "from scipy.special import expit as sigmoid\n",
+    "from itertools import izip\n",
     "\n",
+    "SIZE = 100\n",
+    "\n",
+    "# Generate Training Data\n",
     "random.seed(42)\n",
-    "training_x  = np.array(zip(2*random.randn(100), 2*random.randn(100)))\n",
-    "training_t = [0 if x[1]  > x[0] else 1 for x in training_x]\n",
-    "training_data = zip(training_x, training_t)\n",
-    "plt.scatter([x[0] for x in training_x], [x[1] for x in training_x],  c=training_t)"
+    "training_x  = np.random.normal(size=[SIZE, 2])\n",
+    "training_t = (training_x[:, 1] > training_x[:, 0]).astype(np.int)\n",
+    "plt.scatter(training_x[:,0], training_x[:,1],  c=training_t)\n",
+    "plt.xlabel(\"x[0]\")\n",
+    "plt.ylabel(\"x[1]\")\n",
+    "plt.title(\"Training Data\")"
    ]
   },
   {
@@ -127,24 +133,35 @@
    },
    "outputs": [],
    "source": [
-    "epochs = 3000\n",
-    "weights = np.array([.15, .15])\n",
+    "epochs = 1000\n",
+    "weights = np.array([1., 0.])\n",
     "learning_rate = .001\n",
-    "for epoch in xrange(epochs):\n",
-    "    for x_vector, t in training_data:\n",
-    "        pred = sig(np.inner(x_vector, weights))\n",
-    "        update = learning_rate * pred * (1 - pred) * (pred - t)\n",
-    "        weights = weights - (update * x_vector)\n",
-    "    if epoch > 0 and epoch % 1000 == 0:\n",
-    "        print \"weights after epoch %s : %s\" % (str(epoch), str(weights))\n",
-    "        \n",
-    "        \n",
-    "actuals = [t[1] for t in training_data]\n",
-    "preds = [1 if sigmoid(np.inner(t[0], weights)) > .5 else 0 for t in training_data]\n",
     "\n",
-    "print \"Mean Absolute Error:\", metrics.mean_absolute_error(actuals, preds)\n",
-    "print \"Mean Squared Error:\", metrics.mean_squared_error(actuals, preds)\n",
-    "print \"R^2:\", metrics.r2_score(actuals, preds)\n"
+    "normalized_weight_history = []\n",
+    "for epoch in xrange(epochs):\n",
+    "    pred = sigmoid(np.dot(training_x, weights))\n",
+    "    deriv = pred * (1 - pred) * (pred - training_t)\n",
+    "    update = np.dot(deriv, training_x)\n",
+    "    weights -= learning_rate * update\n",
+    "    if epoch % 50 == 0:\n",
+    "        normalized_weight_history += [weights / np.abs(weights).sum()]\n",
+    "normalized_weight_history = np.array(normalized_weight_history)\n",
+    "        \n",
+    "preds = (sigmoid(np.dot(training_x, weights)) > .5).astype(int)\n",
+    "\n",
+    "print \"Mean Absolute Error:\", metrics.mean_absolute_error(training_t, preds)\n",
+    "print \"Mean Squared Error:\", metrics.mean_squared_error(training_t, preds)\n",
+    "print \"R^2:\", metrics.r2_score(training_t, preds)\n",
+    "\n",
+    "plt.scatter(\n",
+    "    normalized_weight_history[:, 0],\n",
+    "    normalized_weight_history[:, 1]\n",
+    ")\n",
+    "plt.xlim([-1, 1])\n",
+    "plt.ylim([-1, 1])\n",
+    "plt.xlabel(\"weight[0]\")\n",
+    "plt.ylabel(\"weight[1]\")\n",
+    "plt.title(\"Convergence of Weights\")"
    ]
   },
   {
@@ -177,8 +194,11 @@
     "    k, b = np.linalg.lstsq(A, y)[0]\n",
     "    plt.plot(xrange, k*xrange + b, 'k')\n",
     "\n",
-    "plt.scatter([x[0] for x in training_x], [x[1] for x in training_x],  c=training_t)\n",
-    "drawLine2P([p1[0], p2[0]], [p1[1], p2[1]], [-6, 6])"
+    "plt.scatter(training_x[:,0], training_x[:,1],  c=training_t)\n",
+    "drawLine2P([p1[0], p2[0]], [p1[1], p2[1]], [-6, 6])\n",
+    "plt.xlabel(\"x[0]\")\n",
+    "plt.ylabel(\"x[1]\")\n",
+    "plt.title(\"Training Data with Prediction\")"
    ]
   },
   {
@@ -607,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.8"
   }
  },
  "nbformat": 4,
