Fixing math for neural nets

--- a/neural_nets.ipynb
+++ b/neural_nets.ipynb
@@ -72,7 +72,7 @@
     " - compute the inner product $\\vec{\\mathbf{w}} \\cdot \\vec{v} := u$\n",
     " - calculate $f(u)$, where $f$ is an _activation function_ (in a perceptron, the Heaviside step function, as in the diagram below) and use this as our output predicted class.\n",
     " \n",
-    "Activation functions typically map some high-magnitude value into \\[-1, 1\\] - the Heaviside step function does this discretely based on sign. Another commonly used function, the _[logistic sigmoid function](https://en.wikipedia.org/wiki/Logistic_function)_, maps into the continuous intervial (0, 1). \n",
+    "Activation functions typically map from the real number line into ${-1, 1}$ - the Heaviside step function does this discretely based on sign. Another commonly used function, the _[logistic sigmoid function](https://en.wikipedia.org/wiki/Logistic_function)_, maps into the continuous intervial (0, 1). \n",
     "\n",
     "It may also be instructive to think of this as matrix multiplication (with $\\vec{v}$ a $1 \\times n$ matrix and $\\vec{\\mathbf{w}}$ an $n \\times 1$ matrix)- when we chain together perceptrons for a neural net, we can in fact represent each layer of the model as a matrix.\n",
     "\n",
@@ -90,7 +90,7 @@
     "\n",
     "While the standard perceptron's training algorithm provably converges on linearly separable data, our function is not smooth (due to the use of the Heaviside function), and the proof is not immediate from standard convex optimization methods.\n",
     "\n",
-    "Let's look at a slightly modified perceptron using the [logistic sigmoid function](http://mathworld.wolfram.com/SigmoidFunction.html) $\\sigma$ as the activation function instead of the Heaviside function, and derive our training method from there.\n",
+    "Let's look at a slightly modified perceptron using the [logistic sigmoid function](http://mathworld.wolfram.com/SigmoidFunction.html) $\\sigma$ as the activation function instead of the Heaviside function, and derive our training method from there.  Note that our labels are now $\\{-1, 1\\}$.\n",
     "\n",
     "Here's our objective function: \n",
     "\n",
@@ -98,7 +98,7 @@
     "\n",
     "Where we take training samples from our training set $T$. We let $t_i$ be our gold standard datum for the $i$-th training sample, and let $x_i$ be the $i$-th sample's input. Then, $ u_i = u(\\vec{x}_i) = \\vec{\\mathbf{w}} \\cdot \\vec{x}_i$, and $f(u_i) = \\sigma (u_i)$ is the output given by our model with the current weights on this training sample. In otherwords, instead of the Heaviside function as our activation function $f$, we've switched to the logistic sigmoid. For simpler derivation later, let $f_i = f(u_i)$.\n",
     "\n",
-    "As it turns out, this is the objective function for a very familiar model - [logistic regression](https://en.wikipedia.org/wiki/Logistic_regression). We can use the usual convex optimization methods - namely [Stochastic Gradient Descent](https://en.wikipedia.org/wiki/Stochastic_gradient_descent) (SGD) - to train our model.\n",
+    "As it turns out, this is the objective function for a very familiar model - [Logistic Regression](https://en.wikipedia.org/wiki/Logistic_regression). We can use the usual convex optimization methods - namely [Stochastic Gradient Descent](https://en.wikipedia.org/wiki/Stochastic_gradient_descent) (SGD) - to train our model.\n",
     "\n",
     "To see this, let's take $\\frac{\\partial{E}}{\\partial{w_j}}$, the derivative of the objective with respect to the $j$-th index of the weight vector $\\vec{\\mathbf{w}}$. Noting that differentiation is linear and using the chain rule, it's easy to see that:\n",
     "\n",
@@ -107,9 +107,12 @@
     "        \n",
     "Here's each of those terms, from the equation above (and noting $\\frac{d\\sigma}{dx} = \\sigma(x) ( 1 - \\sigma(x))$:\n",
     "\n",
-    "$$ \\frac{\\partial{E}}{\\partial{f_i}} = (t_i - f_i) \\\\\n",
-    "   \\frac{\\partial{f_i}}{\\partial{u_i}} =  (f_i)(1-f_i) \\\\\n",
-    "   \\frac{\\partial{u_i}}{\\partial{w_j}} = x_i\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\frac{\\partial{E}}{\\partial{f_i}} & = (t_i - f_i) \\\\\n",
+    "   \\frac{\\partial{f_i}}{\\partial{u_i}} & =  (f_i)(1-f_i) \\\\\n",
+    "   \\frac{\\partial{u_i}}{\\partial{w_j}} & = x_i\n",
+    "\\end{align*}\n",
     "$$\n",
     "Because we're using SGD, we don't need to take the gradient with respect to the entire function - just the single example $x_i$ we plan to iteratively update $\\vec{\\mathbf{w}}$ with.\n",
     "\n",
