--- a/neural_nets.ipynb
+++ b/neural_nets.ipynb
@@ -20,6 +20,8 @@
    "source": [
     "# Data Science in 30 minutes: Neural networks and `word2vec`\n",
     "\n",
+    "We run a [data science fellowship](https://www.thedataincubator.com/fellowship.html?ref=ds30) and one of the most in demand topics in data science and machine-learning is neural networks.\n",
+    "\n",
     "A _neural network_ is a method of machine learning which chains together a number of more basic models (_nodes_) at a number of _layers_, with each layer feeding into the next. To make this more clear, let's look at the most basic (1-node, 1-layer) neural network, the \"perceptron\".\n",
     "\n",
     "## Neural Net Basics: The perceptron\n",
@@ -611,6 +613,18 @@
     "# References and useful links\n",
     "  \n",
     "http://www-personal.umich.edu/~ronxin/pdf/w2vexp.pdf - a good explanation of word2vec including a succinct overview of backpropogation, as well as `wevi`, the tool we used to visualize the algorithm and its embedding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## If you want more ...\n",
+    "This is meant to just give you a brief guided tour of just a few topics in data science.\n",
+    "\n",
+    "If you enjoyed this and want to learn more about doing data science in industry, consider [applying](https://www.thedataincubator.com/fellowship.html#apply?ref=ds30) to be a fellow at [The Data Incubator](https://www.thedataincubator.com/?ref=ds30)\n",
+    "\n",
+    "If you would like to hire data scientists, introduce data science corporate training, or partner to bring The Data Incubator to your country, reach out [here](https://www.thedataincubator.com/hiring.html?ref=ds30).\n"
    ]
   }
  ],
